tests/baselines/reference/overloadsWithProvisionalErrors.errors.txt
tests/cases/compiler/overloadsWithProvisionalErrors.ts(6,6): error TS2345: Argument of type '(s: 文字) => {}' is not assignable to parameter of type '(s: 文字) => { a: 数字; b: 数字; }'.
  Type '{}' is not assignable to type '{ a: 数字; b: 数字; }'.
    Property 'a' is missing in type '{}'.
tests/cases/compiler/overloadsWithProvisionalErrors.ts(7,17): error TS2304: Cannot find name 'blah'.
tests/cases/compiler/overloadsWithProvisionalErrors.ts(8,6): error TS2345: Argument of type '(s: 文字) => { a: 任意; }' is not assignable to parameter of type '(s: 文字) => { a: 数字; b: 数字; }'.
  Type '{ a: 任意; }' is not assignable to type '{ a: 数字; b: 数字; }'.
    Property 'b' is missing in type '{ a: 任意; }'.
tests/cases/compiler/overloadsWithProvisionalErrors.ts(8,17): error TS2304: Cannot find name 'blah'.


==== tests/cases/compiler/overloadsWithProvisionalErrors.ts (4 errors) ====
    var func: {
        (s: string): number;
        (lambda: (s: string) => { a: number; b: number }): string;
    };
    
    func(s => ({})); // Error for no applicable overload (object type is missing a and b)
         ~~~~~~~~~
!!! error TS2345: Argument of type '(s: 文字) => {}' is not assignable to parameter of type '(s: 文字) => { a: 数字; b: 数字; }'.
!!! error TS2345:   Type '{}' is not assignable to type '{ a: 数字; b: 数字; }'.
!!! error TS2345:     Property 'a' is missing in type '{}'.
    func(s => ({ a: blah, b: 3 })); // Only error inside the function, but not outside (since it would be applicable if not for the provisional error)
                    ~~~~
!!! error TS2304: Cannot find name 'blah'.
    func(s => ({ a: blah })); // Two errors here, one for blah not being defined, and one for the overload since it would not be applicable anyway
         ~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(s: 文字) => { a: 任意; }' is not assignable to parameter of type '(s: 文字) => { a: 数字; b: 数字; }'.
!!! error TS2345:   Type '{ a: 任意; }' is not assignable to type '{ a: 数字; b: 数字; }'.
!!! error TS2345:     Property 'b' is missing in type '{ a: 任意; }'.
                    ~~~~
!!! error TS2304: Cannot find name 'blah'.